src/AdvancedSearchBox.css
.AdvancedSearchBox{
    padding:20px;
    height: 100%;
}

.AdvancedSearchBox .search-box-body{
    height: 100%;
    width: auto;
    padding:0px;
    padding-top: 15px;
    padding-bottom: 20px;
    border-radius: 30px;}

.AdvancedSearchBox .search-box-inner-body {
    align-items: center;
    width: 80%;
    height: 100%;
    margin: auto;
}

#selection-scrollable{
    scroll-behavior: smooth;
    overflow-y:auto;
    border-style: solid;
    border-top: 10px;
    border-bottom: 10px;
    border-image: linear-gradient(to right, rgba(255,255,255,0)  10%, rgba(255,255,255,0.5)  50% ,  rgba(255,255,255,0) 90%) 100% 0 100% 0/2px 0 2px 0;
    padding-top: 5px;
    padding-bottom: 5px;
}

#current-selections{
    margin-top: 4px;
    margin-bottom: 4px;
}

.static-button{
    margin-top: 10px;
}

#adv-view-button{
    margin-top: 10px;
}

#selection-scrollable::-webkit-scrollbar-track:vertical {
    color: transparent;
}

#selection-scrollable::-webkit-scrollbar-track:horizontal {
    color: transparent;
}

#selection-scrollable::-webkit-scrollbar {
    -webkit-appearance: none;
    background-color: transparent;
    width: 16px;
}

#selection-scrollable::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: #C1C1C1;
    border-color: transparent;
    border-radius: 9px 8px 8px 9px;
    border-style: solid;
    border-width: 3px 3px 3px 4px; /* Workaround because margins aren't supported */
}
.AdvancedSearchBox.dropdown-item{
    padding: 0.5vh;
    margin:0px;
    font-size: 12px;
}

.AdvancedSearchBox .range-button-display.dropdown-button-display{
    font-size: 14px;
    max-width: 70%;
    min-width: 70%;
    text-align: center;
    padding-bottom: 5px;
}

.AdvancedSearchBox  p.dropdown-button-display{
    font-size: 14px;
    text-align: center;
    background-color: transparent;
    font-family: 'MonserratLight';
    border: none;
    text-align: left;
    margin-bottom: 10px;
}
.AdvancedSearchBox .search-box-body .range-button.dropdown-button {
    max-width: 45%;
    min-width: 45%;
    padding-left:5px;
    padding-right:5px;
}

.AdvancedSearchBox .search-box-body .dropdown-button{
    position: relative;
    max-width: 100%;
    min-width: 100%;
    margin-bottom: 0px;
    padding:0px;
}

.AdvancedSearchBox .search-box-body .dropdown-button:hover{
    background-color: rgb(68, 68, 68);
    cursor: pointer;
}

.param-title{
    margin: 0px;
    margin-top: 6px;
    margin-bottom: 2px;
}

.AdvancedSearchBox .arrow {
    display: inline-block;
    text-align: center;
    margin: 0px;
}

.advanced-grid{
    display: grid;
    grid-template-columns: 50% 50% ;
}

#run-advanced-search-button{
    font-size: 20px;
    font-family: "MontserratSemiBold";
    min-width: 20%;
    padding:10px;
    margin-top: 10px;
    border:none;
    background-color:     rgb(187, 104, 231) ;
    color: rgb(15, 15, 15);
    border-radius: 30px;
    cursor: pointer;
}

#run-advanced-search-button:hover{
    background-color:     rgb(201, 112, 248) ;
}

#run-advanced-search-button:active{
    background-color:     rgb(156, 88, 192) ;
}

#view-selection-adv-button{
    max-width: 200px;
    min-width: 200px;
    text-align: center;
    margin-bottom: 10px;
}

.AdvancedSearchBox p.view-selection-adv-dd{
    text-align: center;
    width: auto;
    margin:10px;
    font-size: 18px;
}

.choose-parameters-label{
    padding-top: 15px;
    position: relative;

}

.param-content{
    font-size: 16px;
}

#show-advanced-parameters{
    position: absolute;
    right: 0;
    margin-right: 20px;
}

.AdvancedSearchBox .ant-switch{
    background-color: rgb(63, 63, 63);
}

.AdvancedSearchBox .ant-switch-checked{
    background-color: rgba(165, 80, 212, 1);
}

.text-area{
    min-width: 70%;
    max-width: 70%;
    width:70%;
    overflow:hidden;
}

.text-area-2{
    min-width: 70%;
    max-width: 70%;
    width:70%;
    overflow:hidden;
}

.advanced-grid-item{
    width: 75%;
    margin:auto;
}

